@@ -1,5 +1,7 @@
 ﻿0.9.4a
 Bugfixing:
+- Fixed some errors regarding the Frelia's convertable hangars
+- The Drone Carrier hullmod now properly sounds an error when mounting incompatible LPCs
 - Fixed Sylvetra crash error
 - Fixed chain-lightning style weapons such as the Clemency Ping triggering multiple times if the ship moved fast enough
 
